--- a/WebContent/pages/reports/cheque/cheque.jrxml
+++ b/WebContent/pages/reports/cheque/cheque.jrxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="cheque" pageWidth="496" pageHeight="226" orientation="Landscape" columnWidth="496" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="3104f81e-adc7-4cbc-9d54-dfaef23d02ef">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="cheque" pageWidth="496" pageHeight="212" orientation="Landscape" columnWidth="496" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="3104f81e-adc7-4cbc-9d54-dfaef23d02ef">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
-	<property name="com.jaspersoft.studio.unit." value="mm"/>
+	<property name="com.jaspersoft.studio.unit." value="cm"/>
 	<property name="net.sf.jasperreports.print.create.bookmarks" value="true"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<property name="com.jaspersoft.studio.unit.pageHeight" value="mm"/>
-	<property name="com.jaspersoft.studio.unit.pageWidth" value="mm"/>
-	<property name="com.jaspersoft.studio.unit.columnWidth" value="mm"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="cm"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="cm"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="cm"/>
 	<parameter name="UF" class="java.lang.String"/>
 	<parameter name="CIDADE" class="java.lang.String"/>
 	<parameter name="VALOR" class="java.lang.String"/>
@@ -37,59 +37,52 @@ WHERE USUARIO =  $P{USUARIO}]]>
 		<property name="com.jaspersoft.studio.field.label" value="TIPO"/>
 	</field>
 	<detail>
-		<band height="146" splitType="Stretch">
+		<band height="212" splitType="Stretch">
 			<textField>
-				<reportElement x="412" y="9" width="70" height="10" uuid="6cffd179-e3e5-4823-87eb-4f6f3197e895"/>
+				<reportElement x="370" y="13" width="110" height="10" uuid="6cffd179-e3e5-4823-87eb-4f6f3197e895"/>
 				<textElement>
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{VALOR}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="16" y="55" width="300" height="10" uuid="03a401dc-96b9-4f24-afcf-baa881555192"/>
+				<reportElement x="16" y="72" width="300" height="10" uuid="03a401dc-96b9-4f24-afcf-baa881555192"/>
 				<textElement>
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{NOME}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="140" y="70" width="100" height="10" uuid="234b9720-da94-4eed-b880-af7984e89e7c"/>
+				<reportElement x="125" y="88" width="172" height="10" uuid="234b9720-da94-4eed-b880-af7984e89e7c"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{CIDADE}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="260" y="70" width="22" height="10" uuid="980de285-20d9-43f8-8ccf-9317dea20984"/>
-				<textElement>
-					<font fontName="Arial" size="8"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{UF}]]></textFieldExpression>
-			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="30" y="32" width="450" height="10" uuid="0206a1ed-4756-4373-b06c-3b110df4b76d"/>
+				<reportElement x="10" y="35" width="470" height="10" uuid="0206a1ed-4756-4373-b06c-3b110df4b76d"/>
 				<textElement rotation="None">
 					<font fontName="Arial" size="8"/>
-					<paragraph lineSpacing="Single" lineSpacingSize="1.0"/>
+					<paragraph lineSpacing="Fixed" lineSpacingSize="22.0"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{VALOREXTENSO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="340" y="70" width="70" height="10" uuid="1d663de2-ffb4-4f19-99ee-5955ce38b5a1"/>
+				<reportElement x="339" y="88" width="90" height="10" uuid="1d663de2-ffb4-4f19-99ee-5955ce38b5a1"/>
 				<textElement textAlignment="Left">
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{MES}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="300" y="70" width="20" height="10" uuid="fc363b14-27a2-46c8-850b-64c330053011"/>
-				<textElement>
+				<reportElement x="303" y="89" width="20" height="10" uuid="fc363b14-27a2-46c8-850b-64c330053011"/>
+				<textElement textAlignment="Right">
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{DIA}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="436" y="70" width="50" height="10" uuid="8b11e896-83ce-45f1-8e12-b184e670e507"/>
+				<reportElement x="449" y="88" width="34" height="10" uuid="8b11e896-83ce-45f1-8e12-b184e670e507"/>
 				<textElement>
 					<font fontName="Arial" size="8"/>
 				</textElement>
